increased fav icon size by .1 rem to prevent image clipping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,7 +342,7 @@ button.fave {
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    width: 1.5rem;
+    width: 1.6rem;
     height: 1.5rem;
     float: right;
     position: relative;
